--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/uswtdb_v1_3_20190107_1.js"></script>
+        <script src="data/pnw_turbines_0.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[46.043426671450796,-119.21379521929212],[46.14022902223787,-119.01228400535486]]);
+        }).fitBounds([[46.041957456,-119.194294365],[46.1470884515,-119.03205925]]);
         var hash = new L.Hash(map);
         map.attributionControl.addAttribution('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a>');
         var bounds_group = new L.featureGroup([]);
+        var basemap0 = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors,<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
+            maxZoom: 28
+        });
+        basemap0.addTo(map);
         function setBounds() {
         }
-        var overlay_GoogleHybrid_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=y&x={x}&y={y}&z={z}', {
-            opacity: 1.0
-        });
-        overlay_GoogleHybrid_0.addTo(map);
-        map.addLayer(overlay_GoogleHybrid_0);
-        function pop_uswtdb_v1_3_20190107_1(feature, layer) {
+        function pop_pnw_turbines_0(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['case_id'] !== null ? Autolinker.link(String(feature.properties['case_id'])) : '') + '</td>\
@@ -123,38 +123,38 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_uswtdb_v1_3_20190107_1_0() {
+        function style_pnw_turbines_0_0() {
             return {
-                pane: 'pane_uswtdb_v1_3_20190107_1',
-                radius: 3.999999999999997,
+                pane: 'pane_pnw_turbines_0',
+                radius: 4.0,
                 opacity: 1,
-                color: 'rgba(50,87,128,1.0)',
+                color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 2.0,
+                weight: 1,
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(72,123,182,1.0)',
+                fillColor: 'rgba(79,237,61,1.0)',
             }
         }
-        map.createPane('pane_uswtdb_v1_3_20190107_1');
-        map.getPane('pane_uswtdb_v1_3_20190107_1').style.zIndex = 401;
-        map.getPane('pane_uswtdb_v1_3_20190107_1').style['mix-blend-mode'] = 'normal';
-        var layer_uswtdb_v1_3_20190107_1 = new L.geoJson(json_uswtdb_v1_3_20190107_1, {
+        map.createPane('pane_pnw_turbines_0');
+        map.getPane('pane_pnw_turbines_0').style.zIndex = 400;
+        map.getPane('pane_pnw_turbines_0').style['mix-blend-mode'] = 'normal';
+        var layer_pnw_turbines_0 = new L.geoJson(json_pnw_turbines_0, {
             attribution: '<a href=""></a>',
-            pane: 'pane_uswtdb_v1_3_20190107_1',
-            onEachFeature: pop_uswtdb_v1_3_20190107_1,
+            pane: 'pane_pnw_turbines_0',
+            onEachFeature: pop_pnw_turbines_0,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_uswtdb_v1_3_20190107_1_0(feature));
+                return L.circleMarker(latlng, style_pnw_turbines_0_0(feature));
             },
         });
-        bounds_group.addLayer(layer_uswtdb_v1_3_20190107_1);
-        map.addLayer(layer_uswtdb_v1_3_20190107_1);
+        bounds_group.addLayer(layer_pnw_turbines_0);
+        map.addLayer(layer_pnw_turbines_0);
         setBounds();
         </script>
     </body>
